# rapktool

./: .gitignore  Cargo.toml
aapt/: Cargo.toml
aapt/src/: aapt_assets.rs  config_description.rs  main.rs
aapt2/: Cargo.toml
src/: lib.rs  main.rs
src/util/: aapt_manager.rs  jar.rs  mod.rs
