[workspace]
members = [
	"aapt",
	"aapt2",
]

[package]
name = "apktool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
error-stack = "0.2.4"
rand = "0.8.5"
thiserror = "1.0.38"
